<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="7dp"
    android:backgroundTint="@color/white"
    android:elevation="11dp"
    android:paddingStart="20dp"
    android:layout_marginStart="20dp"
    android:clipToPadding="false"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <TextView
               android:id="@+id/task_card_CName"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="CS220"
               android:textSize="20dp"
               android:textColor="@color/lightBlue"
               android:layout_marginTop="10dp"
               android:layout_marginStart="20dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>
           <TextView
               android:id="@+id/task_card_DDate"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/aug_29_2021"
               android:textColor="@color/gray"
               android:textSize="15sp"
               android:layout_marginTop="10dp"
               android:layout_marginEnd="20dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               />
       </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/task_card_TName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <TextView
            android:id="@+id/task_card_TDesc"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:textColor="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>




</androidx.cardview.widget.CardView>